Add StructuredConcurrency test and enable preview
Preview is only enabled for tests